[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/img/tileset.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2, 2 )

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1.125 ) ]
}

[node name="Player" type="Node2D"]
light_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 0
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="Detector" type="Area2D" parent="."]
show_behind_parent = true
light_mask = 0
collision_mask = 122
input_pickable = false

[node name="Collision" type="CollisionShape2D" parent="Detector"]
light_mask = 0
shape = SubResource( 4 )

[node name="WallDetector" type="Node2D" parent="."]
show_behind_parent = true
light_mask = 0

[node name="Front" type="RayCast2D" parent="WallDetector"]
light_mask = 0
enabled = true
cast_to = Vector2( 0, -16 )
collision_mask = 4
collide_with_areas = true

[node name="Down" type="RayCast2D" parent="WallDetector"]
light_mask = 0
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 4
collide_with_areas = true

[node name="Left" type="RayCast2D" parent="WallDetector"]
light_mask = 0
enabled = true
cast_to = Vector2( -16, 0 )
collision_mask = 4
collide_with_areas = true

[node name="Right" type="RayCast2D" parent="WallDetector"]
light_mask = 0
enabled = true
cast_to = Vector2( 16, 0 )
collision_mask = 4
collide_with_areas = true

[node name="Camera" type="Camera2D" parent="."]
show_behind_parent = true
light_mask = 0
current = true
process_mode = 0
limit_left = 0
limit_top = 0
limit_right = 0
limit_bottom = 0
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_speed = 2.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="SFX" type="AudioStreamPlayer" parent="."]

[connection signal="area_entered" from="Detector" to="." method="_on_area_entered"]
[connection signal="area_exited" from="Detector" to="." method="_on_area_exited"]
[connection signal="body_entered" from="Detector" to="." method="_on_body_entered"]
